# libpgf

./: .gitignore
doc/: Doxyfile.in
include/: PGFplatform.h  PGFtypes.h
src/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Makefile.am  PGFimage.cpp  Subband.cpp  Subband.h  WaveletTransform.cpp  WaveletTransform.h
src/bitpack/: bitpack.c  bitpack.h
src/fpc/: fpc.c
src/fse/: fse.h  fse_compress.c
src/srle/: sb2.c  sparsebitrle.c  sparserle.c  sparserle.h
src/tunstall/: tunstall.h
src/zeropack/: compress.c  zeropack.c  zeropack.h
